chore(config): update cors